[package]
name = "bpb"
version = "1.2.0"
authors = ["Without Boats <boats@mozilla.com>"]
edition = "2018"
description = "boats's personal barricade"
repository = "https://github.com/withoutboats/bpb"
license = "MIT OR Apache-2.0"
categories = ["authentication", "command-line-utilities"]
publish = false

[dependencies]
failure = "0.1"
hex = "0.4"
rand = "0.6"
serde = "1"
serde_derive = "1"
sha2 = "0.8"
shlex = "1"
toml = "0.5"

[dependencies.pbp]
version = "0.4.0"
git = "https://github.com/tyrchen/pbp"
branch = "feature/make-project-up-to-date"
features = ["dalek"]

[dependencies.ed25519-dalek]
version = "0.9"
