[package]
name = "bpb"
description = "boats's personal barricade"
license = "MIT OR Apache-2.0"
version = "1.2.0"
repository = "https://github.com/withoutboats/bpb"
edition = "2018"
authors = ["Without Boats <boats@mozilla.com>"]

[dependencies]
toml = "0.5"
rand = "0.6"
sha2 = "0.8"
serde_derive = "1"
serde = "1"
hex = "0.4"
failure = "0.1"
shlex = "1"

[dependencies.pbp]
version = "0.4.0"
git = "https://github.com/tyrchen/pbp"
branch = "feature/make-project-up-to-date"
features = ["dalek"]

[dependencies.ed25519-dalek]
version = "0.9"
